<resources>

    <string name="app_name">Firebase Create Account</string>

    <!-- MainActivity Strings Start -->
    <string name="main_activity_hint_name">Full Name</string>
    <string name="main_activity_helper_name">Min. 4 - Max. 40 Characters</string>
    <string name="main_activity_error_name">* Error:</string>
    <string name="main_activity_hint_email">Email</string>
    <string name="main_activity_error_email">* Please enter a valid email</string>
    <string name="main_activity_hint_phone">Phone</string>
    <string name="main_activity_error_phone">* Please enter a valid phone number</string>
    <string name="main_activity_helper_20">Max. 20 Characters</string>
    <string name="main_activity_hint_document_id">Document ID</string>
    <string name="main_activity_helper_10">Max. 10 Characters</string>
    <string name="main_activity_hint_blood_type">Blood Type</string>
    <string name="main_activity_button_create_account">Create Account</string>
    <string name="main_activity_img_content_description">Firebase logo</string>
    <!-- MainActivity Strings End -->

</resources>
