<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/firebase_logo_height"
            android:contentDescription="@string/main_activity_img_content_description"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_logo_firebase" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ly_name"
            style="@style/MainActivityTextInputLayout"
            android:layout_marginTop="0dp"
            android:hint="@string/main_activity_hint_name"
            app:errorEnabled="true"
            app:helperText="@string/main_activity_helper_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_name"
                style="@style/MainActivityEditText"
                android:inputType="textCapWords"
                android:maxLength="40" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ly_email"
            style="@style/MainActivityTextInputLayout"
            android:hint="@string/main_activity_hint_email"
            app:helperText="@string/main_activity_helper_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_email"
                style="@style/MainActivityEditText"
                android:inputType="textEmailAddress"
                android:maxLength="40" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ly_phone"
            style="@style/MainActivityTextInputLayout"
            android:hint="@string/main_activity_hint_phone"
            app:helperText="@string/main_activity_helper_20">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_phone"
                style="@style/MainActivityEditText"
                android:inputType="phone"
                android:maxLength="20" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/MainActivityTextInputLayout"
            android:hint="@string/main_activity_hint_document_id"
            app:helperText="@string/main_activity_helper_10">

            <android.support.design.widget.TextInputEditText
                style="@style/MainActivityEditText"
                android:inputType="number"
                android:maxLength="10" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sixty_four_margin"
            android:layout_marginTop="@dimen/twenty_four_margin"
            android:layout_marginRight="@dimen/sixty_four_margin"
            android:paddingLeft="@dimen/four_margin"
            android:paddingRight="@dimen/four_margin"
            android:text="@string/main_activity_hint_blood_type"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="?android:textColorHint" />

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sixty_four_margin"
            android:layout_marginRight="@dimen/sixty_four_margin" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fourty_eight_margin"
            android:layout_marginTop="@dimen/thirty_two_margin"
            android:layout_marginRight="@dimen/fourty_eight_margin"
            android:layout_marginBottom="@dimen/thirty_two_margin"
            android:text="@string/main_activity_button_create_account"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
